# Robotics_Project

./: .gitignore  README.md  kinematics.cpp  rviz_project1.rviz
bags/: frames.gv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
msg/: Velocities.msg
project1/: CMakeLists.txt  package.xml  readme.md
project1/cfg/: dyn_rec_eu_rk.cfg  parameters.cfg
project1/launch/: my_project1.launch
project1/msg/: Calibration.msg
project1/src/: client.cpp  estimator_for_calibration.cpp  kinematics.cpp  odometry.cpp  wheel_speeds.cpp
project2/: CMakeLists.txt  package.xml  readme.md
project2/config/: amcl.launch.xml  ekf_loc.yaml  gmapping.launch.xml
project2/launch/: amcl.launch  gmapping.launch  localization.launch  scan_merger.launch
project2/map/: map.pgm
project2/rviz/: loc.rviz  map.rviz
project2/scripts/: map_and_trajectory.py
project2/src/: odom_tf.cpp
src/: kinematics.cpp  odometry.cpp
src/project1/: package.xml
src/project1/src/: client.cpp  kinematics.cpp  odometry.cpp  wheel_speeds.cpp
src/project1/srv/: Reset.srv
