<?xml version="1.0"?>
<package format="2">
  <name>project1</name>
  <version>0.0.0</version>
  <description>The project1 package</description>

  <maintainer email="angelo.attivissimo@mail.polimi.it">Angelo Attivissimo (10667094)</maintainer>
  <maintainer email="roberto.abbate@mail.polimi.it">Roberto Abbate (10733451)</maintainer>

  <author email="angelo.attivissimo@mail.polimi.it">Angelo Attivissimo (10667094)</author>
  <author email="roberto.abbate@mail.polimi.it">Roberto Abbate (10733451)</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <!-- for custom messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>